# virtel

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  gradle.properties  mobile.toml  settings.gradle.kts
.fleet/: receipt.json
.github/workflows/: detekt.yml  ubuntu.yml
composeApp/: build.gradle.kts  proguard-desktop.pro
composeApp/release/: output-metadata.json
composeApp/res/: logo.icns
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/vladceresna/virtel/: ActualAPI.android.kt  LauncherActivity.kt  MainActivity.kt  PermissionsViewModel.kt  Platform.android.kt  VirtelContext.kt  VirtelLogo.android.kt
composeApp/src/androidMain/kotlin/com/vladceresna/virtel/ai/: PicoLLM.android.kt
composeApp/src/androidMain/kotlin/com/vladceresna/virtel/controllers/: Log.android.kt  MediaSystem.android.kt  PlayMusic.android.kt
composeApp/src/androidMain/kotlin/com/vladceresna/virtel/lib/: CodeEditor.kt
composeApp/src/androidMain/kotlin/com/vladceresna/virtel/screens/: WidgetRender.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/drawable/: baseline_close_fullscreen_24.xml
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/: ActualAPI.kt  App.kt  Application.kt  Boot.kt  Flow.kt  Greeting.kt  Installer.kt  Platform.kt  Processor.kt  Program.kt  Screen.kt  ScreenOperator.kt  VirtelLogo.kt  VirtelSystem.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/ai/: ElevenTTS.kt  PicoLLM.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/api/: SystemApiImpl.kt  UiApiImpl.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/controllers/: Backups.kt  DataStore.kt  EmbeddedServer.kt  FileSystem.kt  Flow.kt  Launchers.kt  Log.kt  MediaSystem.kt  Networker.kt  PlayMusic.kt  Program.kt  Programs.kt  ScreenModel.kt  VarInstaller.kt  VirtelSystem.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/icons/: Check.kt  ChevronDown.kt  ChevronLeft.kt  ChevronRight.kt  ChevronUp.kt  CirclePlus.kt  Delete.kt  Ellipsis.kt  Expand.kt  Trash2.kt  X.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/lib/: MutexHashSet.kt  MutexQueue.kt  colorFromHex.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/models/: DataStore.kt  Program.kt  ScreenModel.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/openai/: ElevenTTS.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/other/: VirtelException.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/runner/: DataStore.kt  Flow.kt  InstallScreen.kt  LoadingScreen.kt  Program.kt  Screen.kt  ScreenModel.kt  VirtelScreen.kt  VirtelSystem.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/screens/: LoadingScreen.kt  VirtelScreen.kt  WidgetRender.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/store/: UiStore.kt  VirtelStore.kt
composeApp/src/commonMain/kotlin/com/vladceresna/virtel/theme/: Color.kt  InterFontFamily.kt  Theme.kt  Type.kt
composeApp/src/commonMain/kotlin/dev/snipme/highlights/internal/: CodeAnalyzer.kt  SyntaxTokens.kt
composeApp/src/commonMain/kotlin/dev/snipme/highlights/model/: SyntaxLanguage.kt
composeApp/src/commonTest/kotlin/com/vladceresna/virtel/controllers/: DataStoreTest.kt  FileSystemTest.kt  FlowTest.kt  VirtelSystemTest.kt
composeApp/src/commonTest/kotlin/com/vladceresna/virtel/lib/: MutexHashSetTest.kt
composeApp/src/commonTest/kotlin/com/vladceresna/virtel/runner/: FlowTest.kt  VirtelSystemTest.kt
composeApp/src/desktopMain/kotlin/com/vladceresna/virtel/: ActualAPI.desktop.kt  Platform.jvm.kt  VirtelLogo.desktop.kt  main.kt
composeApp/src/desktopMain/resources/: logback.xml
composeApp/src/iosMain/kotlin/com/vladceresna/virtel/: ActualAPI.ios.kt  MainViewController.kt  Platform.ios.kt  VirtelLogo.ios.kt
docs/: lpp.md  vx.md
examples/apps/clicker/src/: main.stick
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
math/: Cargo.toml  build.rs
math/src/: lib.rs  math.udl
src/: app.rs  apps.rs  center.rs  crypto.rs  events.rs  fonts.rs  gtts.rs  lib.rs  log.rs  main.rs  net.rs  render.rs  settings.rs  ui_bridge.rs  ui_kit_draw.rs  ui_layout.rs
src/api/: mod.rs  virtel_api.rs  virtel_fs_api.rs  virtel_net_api.rs  virtel_ui_api.rs
src/wren_api/: virtel_api.wren  virtel_fs_api.wren  virtel_net_api.wren  virtel_ui_api.wren
vcore/: Cargo.toml
vcore/src/: app.rs  apps.rs  lib.rs  settings.rs
vcore/src/api/: mod.rs  virtel_api.rs  virtel_ui_api.rs
virtel-native/: Cargo.toml  build.rs
virtel-native/src/: lib.rs  virtel-native.udl
vnative/: Cargo.toml  build.rs
vnative/src/: api.rs  app.rs  app_file.rs  apps.rs  center.rs  chunk_utils.rs  crypto.rs  data.rs  gtts.rs  lib.rs  log.rs  net.rs  permissions.rs  settings.rs  storage.rs  tokio_setup.rs  vc_vs_converter.rs  virtel_api.rs  vnative.udl  vx.rs
vnative/src/api/: mod.rs  virtel_api.rs  virtel_fs_api.rs  virtel_net_api.rs  virtel_ui_api.rs
vnative/src/vx/: app_file.rs  data.rs
(+21 files in other folders)
