[package]
name = "virtel"
version = "4.0.0"                                   #alpha
authors = ["Vlad Ĉereŝna <vladceresna6@gmail.com>"]
edition = "2021"

[lib]
name = "virtel"
path = "src/lib.rs"


[[bin]]
name = "virtel-desktop"
path = "gen/bin/desktop.rs"

[dependencies]

skia-safe = { version = "0.89.1", features = [
    "gl",
    "binary-cache",
    "textlayout",
] }
winit = { version = "0.30", features = ["android-native-activity"] }
wgpu = "27.0.1"
pollster = "0.4"
softbuffer = "0.4"
taffy = "0.9.2"
mobile-entry-point = "0.1.1"


thiserror = "2"
once_cell = "1.21.3"

tokio = { version = "1.48.0", features = ["full"] }
hyper = "1.8.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

percent-encoding = "2.3.2"

serde_json = "1.0.145"
serde = "1.0.228"

ruwren = "0.4"


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
log = "0.4.29"
ndk-glue = "0.7.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "5.1.0"
