[package]
name = "virtel"
version = "4.0.0"                                   #alpha
authors = ["Vlad Ĉereŝna <vladceresna6@gmail.com>"]
edition = "2021"

[lib]
name = "virtel"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "virtel-desktop"
path = "gen/bin/desktop.rs"

[dependencies]

skia-safe = { version = "0.89.1", features = [
    "gl",
    "binary-cache",
    "textlayout",
] }
winit = { version = "0.30", features = ["android-native-activity"] }
taffy = "0.9.2"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"


thiserror = "2"
once_cell = "1.21.3"

tokio = { version = "1.48.0", features = ["full"] }
hyper = "1.8.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

percent-encoding = "2.3.2"

serde_json = "1.0.145"
serde = "1.0.228"


ruwren = "0.4"


# minreq = {version="2.0.3", features=["https"]}
# rodio = { version = "0.20.1", features = ["cpal-shared-stdcxx"] }
# whichlang = "0.1.0"

# pqc_kyber = "0.7.1"
# crystals-dilithium = "1.0.0"
# sha3 = "0.10.8"
# hex = "0.4.3"
# rand = "0.8.3"
# aes-gcm = "0.10.3"
# base64 = "0.22.1"


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
log = "0.4.29"
android-activity = "0.6"
ndk = "0.9.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "5.1.0"







# [profile.release]
# opt-level = "z"
# debug = false
# lto = true
# codegen-units = 1
# strip = true
# incremental = false
# debug-assertions = false
# overflow-checks = false
# default-features = false
