[package]
name = "vcore"
version = "4.0.0"
edition = "2021"

[lib]
name = "vcore"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
thiserror = "2"
once_cell = "1.21.3"

tokio = { version = "1.48.0", features = ["full"] }
hyper = "1.8.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

percent-encoding = "2.3.2"

serde_json = "1.0.145"
serde = "1.0.228"

ruwren = "0.4.10"
