[package]
name = "virtel-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "virtel-native"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
io_bluetooth = "0.1.0"
natural-tts = { git = "https://github.com/vladceresna/cotts-rs.git" }

uniffi = { version = "0.25.3" }

[build-dependencies]
uniffi = { version = "0.25.3", features = ["build"] }
