[package]
name = "vnative"
version = "0.1.0"
edition = "2021"

[lib]
name = "vnative"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
uniffi = "0.29.4"
thiserror = "2"
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["full"] }
hyper = "1.7.0"

percent-encoding = "2.1.0"
serde_json = "1.0.138"
serde = "1.0.217"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
